Move-over files and CC@3.0 and ng-file-upload

--- a/lab-michael/app/component/navbar/navbar.html
+++ b/lab-michael/app/component/navbar/navbar.html
@@ -1,5 +1,5 @@
 <section class="navbar">
-  <img src="../../assets/img/camera-free-stock-photo-camera.png">
+  <img src="../../assets/img/cf-logo.png">
   <h2>ngAuthFront</h2>
 
   <nav>
