--- a/lab-michael/app/view/home/home.html
+++ b/lab-michael/app/view/home/home.html
@@ -2,11 +2,15 @@
   <br>
     <create-gallery></create-gallery>
       <div class="gallery-items-container">
-          <gallery-item
-           ng-repeat="item in homeCtrl.galleries"
-           gallery="item"
-           delete-done="homeCtrl.galleryDeleteDone(galleryData)"
-           ng-click="homeCtrl.currentGallery = item">
-         </gallery-item>
+        <gallery-item
+         ng-repeat="item in homeCtrl.galleries"
+         gallery="item"
+         delete-done="homeCtrl.galleryDeleteDone(galleryData)"
+         ng-click="homeCtrl.currentGallery = item">
+       </gallery-item>
       </div>
+        <thumbnail-container 
+        ng-if="homeCtrl.currentGallery"
+        gallery="homeCtrl.currentGallery">
+        </thumbnail-container>
 </section>
