more to thumbnail container

--- a/lab-michael/app/component/gallery/thumbnail-container/thumbnail-container.html
+++ b/lab-michael/app/component/gallery/thumbnail-container/thumbnail-container.html
@@ -1,3 +1,7 @@
 <div class="thumbnail-container">
-  
+  <h4>{{ thumbnailContainerCtrl.gallery.name }}</h4>
+    <upload-pic gallery="thumbnailContainerCtrl.gallery"></upload-pic>
+  <div>
+    <pic-thumbnail ng-repeat="item in thumbnailContainerCtrl.gallery.pics" pic="item"></pic-thumbnail>
+  </div>
 </div>
