--- a/lab-michael/app/component/gallery/upload-pic/upload-pic.html
+++ b/lab-michael/app/component/gallery/upload-pic/upload-pic.html
@@ -17,7 +17,7 @@
         select a pic to upload
       </p>
 
-      <button class="btn-std">upload</button>
+      <button class="btn-std" type="button">upload</button>
     </div>
   </form>
 </section>
