--- a/lab-michael/app/component/gallery/thumbnail-container/thumbnail-container.html
+++ b/lab-michael/app/component/gallery/thumbnail-container/thumbnail-container.html
@@ -1,7 +1,10 @@
 <div class="thumbnail-container">
-  <h4>{{ thumbnailContainerCtrl.gallery.name }}</h4>
+  <h4>Hell {{ thumbnailContainerCtrl.gallery.name }}</h4>
     <upload-pic gallery="thumbnailContainerCtrl.gallery"></upload-pic>
   <div>
-    <pic-thumbnail ng-repeat="item in thumbnailContainerCtrl.gallery.pics" pic="item"></pic-thumbnail>
+    <thumbnail ng-repeat="item in thumbnailContainerCtrl.gallery.pics"
+    gallery="thumbnailContainerCtrl.gallery"
+    pic="item">
+   </thumbnail>
   </div>
 </div>
